# Linear

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: library.cpp  mat.h  rational.h  vec.h  vulkanKernel.cpp
src/kernel/: matDet.comp  matDet.hpp  matMul.comp  matMul.hpp  matScl.comp  matScl.hpp  matSum.comp  matSum.hpp  mat_det.hpp  mat_mul.comp  mat_mul.hpp
tests/: CMakeLists.txt  MatTest.cpp  RationalTest.cpp  VecTest.cpp
